# glbindify

./: .gitattributes  .gitignore  Makefile.am  Readme.md  configure.ac  gl.xml  glbindify.cpp  glx.xml  makedebpkg.sh  wgl.xml
debian/: README.Debian  changelog  control  copyright  glbindify.cron.d.ex  glbindify.default.ex  glbindify.doc-base.EX  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
windows/: getopt.c  glbindify.sln  glbindify.vcxproj
